--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KaashBook</title>
-    <link rel="icon" href="./icons/KaashBook-Logo.png" type="image/x-icon" />
+    <link rel="icon" href="./icons/KaashBookLogoAddon64.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/animation.css" />
     <link rel="stylesheet" href="css/fontello.css" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
