added dark mode functionality with toggle switch

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                         </h5>
                     </div>
                     <div>
+                        <button class="btn p-1 shadow-sm m-1" id="theme-btn" title="Toggle dark theme">
+                            <i id="theme-logo" class="icon-moon"></i>
+                        </button>
                         <button class="btn p-1 shadow-sm m-1" id="xl-btn" title="Export as spreadsheet">
                             <i class="icon-table"></i>
                         </button>
