--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="container p-0">
         <div id="nav-bar" class="mb-1 py-1 shadow-sm">
             <div class="row justify-content-between">
-                <div class="col-8 text-start">
+                <div class="col-8 d-flex align-items-center">
                     <img class="img-fluid p-1 m-1" src="icons/KaashBook-Banner.png" alt="KaashBook Logo"
-                        style="max-height: 40px" id="kb-banner" data-bs-toggle="modal" data-bs-target="#profile-modal"
+                        style="max-height:50px" id="kb-banner" data-bs-toggle="modal" data-bs-target="#profile-modal"
                         type="button" />
                 </div>
                 <div class="col-4 text-end">
@@ -374,16 +374,26 @@
                         <img src="icons/KaashBookLogoAddon128.png" class="rounded-circle" alt="img" height="64"
                             width="64">
                     </div>
-                    <h3>KaashBook</h3>
+                    <h3 class="text-center">KaashBook</h3>
                     <p>
                         A simple offline cashbook extension to keep your daily transactions, within your browser!.
                     </p>
                     <p>
                         You can support us here:
                     </p>
-                    <a href="https://github.com/Kaashi-r/KaashBook" target="_blank">
-                        <button type="button" class="btn btn-light">Github <i class="icon-github-circled"></i></button>
-                    </a>
+
+                    <div class="text-center">
+                        <a href="https://github.com/Kaashi-r/KaashBook" target="_blank">
+                            <button type="button" class="btn btn-light">Github <i
+                                    class="icon-github-circled"></i></button>
+                        </a>
+                        <div style="margin: 5px;"></div>
+                        <a href="https://www.buymeacoffee.com/Kaashier" target="_blank"><img
+                                src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee"
+                                style="height: 30px !important;width: 108px !important;" /></a>
+
+                    </div>
+
                 </div>
 
             </div>
